--- a/index.html
+++ b/index.html
@@ -130,19 +130,19 @@ const ITEMS = {
   ],
   flowerPots: [
     { id: "fp1", name: "F.P Big", price: 180 },
-    { id: "fp2", name: "F.P Special", price: 240 },
+    { id: "fp2", name: "F.P Special", price: 240, img: "https://github.com/siddarth4444-0715/rudra_fireworks/blob/main/8c210378-3be4-49b8-91cd-0f4ee450d4b8.jpg" },
     { id: "fp3", name: "F.P Ashoka (RG)", price: 315 },
     { id: "fp4", name: "F.P Colour Koti", price: 540 },
-    { id: "fp5", name: "F.P Super Deluxe", price: 900 },
+    { id: "fp5", name: "F.P Super Deluxe", price: 900, img: "https://github.com/siddarth4444-0715/rudra_fireworks/blob/main/10df0379-a176-44e8-9a7f-7da144443da6.jpg" },
     { id: "fp6", name: "F.P Colour Koti Deluxe (RG)", price: 1050 },
-    { id: "fp7", name: "F.P Colour World (Vanitha)", price: 1550 },
-    { id: "fp8", name: "F.P Colour Koti Super Big (Sonny)", price: 1850 }
+    { id: "fp7", name: "F.P Colour World (Vanitha)", price: 1550, img: "https://github.com/siddarth4444-0715/rudra_fireworks/blob/main/07d1e786-b143-444f-b584-91c5f65565cf.jpg" },
+    { id: "fp8", name: "F.P Colour Koti Super Big (Sonny)", price: 1850, img: "https://github.com/siddarth4444-0715/rudra_fireworks/blob/main/466a7769-51e1-4deb-82a5-39e1ffccc40f.jpg" }
   ],
   groundChakkar: [
     { id: "gc1", name: "G.C Special", price: 240 },
     { id: "gc2", name: "G.C Super Special (VL)", price: 330 },
     { id: "gc3", name: "G.C Deluxe RG", price: 420 },
-    { id: "gc4", name: "Spinner Deluxe (VL)", price: 600 },
+    { id: "gc4", name: "Spinner Deluxe (VL)", price: 600, img: "https://github.com/siddarth4444-0715/rudra_fireworks/blob/main/291d811c-19ce-492a-ab18-f14541b56149.jpg" },
     { id: "gc5", name: "Spinner Super Deluxe", price: 760 }
   ],
   sparkles: [
@@ -155,21 +155,21 @@ const ITEMS = {
     { id: "f2", name: "Peacock Big", price: 1350 },
     { id: "f3", name: "Whistling Peacock", price: 1500 },
     { id: "f4", name: "Lotus Wheel", price: 600 },
-    { id: "f5", name: "KitKat", price: 75 },
+    { id: "f5", name: "KitKat", price: 75, img: "https://github.com/siddarth4444-0715/rudra_fireworks/blob/main/09ccf42f-4050-4476-befa-4b5c3d28f113.jpg" },
     { id: "f6", name: "Whistiling Recycle (VL)", price: 600 },
-    { id: "f7", name: "Ring Ring (VL)", price: 900 },
+    { id: "f7", name: "Ring Ring (VL)", price: 900, img: "https://github.com/siddarth4444-0715/rudra_fireworks/blob/main/0be15da9-2179-4893-a034-4355781a3b34.jpg" },
     { id: "f8", name: "Fly Machine", price: 1100 },
     { id: "f9", name: "Nano Pot", price: 600 },
     { id: "f10", name: "Twins", price: 740 },
-    { id: "f11", name: "Butterfly", price: 450 },
+    { id: "f11", name: "Butterfly", price: 450, img: "https://github.com/siddarth4444-0715/rudra_fireworks/blob/main/79b76025-54da-4a02-8363-0614c65f8d96.jpg" },
     { id: "f12", name: "Bumble (Helicopter)", price: 580 },
     { id: "f13", name: "Mini Pot", price: 750 },
-    { id: "f14", name: "Oggy", price: 900 }
+    { id: "f14", name: "Oggy", price: 900, img: "https://github.com/siddarth4444-0715/rudra_fireworks/blob/main/45adadf5-f417-470c-9bda-3ced44bffca7.jpg" }
   ],
   hundredWala: [
     { id: "w1", name: "24 Chorsa", price: 150 },
     { id: "w2", name: "1000 Wala", price: 600 },
-    { id: "w3", name: "2000 Wala", price: 1200 },
+    { id: "w3", name: "2000 Wala", price: 1200, img: "https://github.com/siddarth4444-0715/rudra_fireworks/blob/main/558199d2-3644-4ffa-aba2-d5a566d1e4b3.jpg" },
     { id: "w4", name: "5000 Wala", price: 3000 },
     { id: "w5", name: "10000 Wala", price: 6000 }
   ],
@@ -190,13 +190,13 @@ const ITEMS = {
   ],
   comet: [
     { id: "c1", name: '3" Commet', price: 750 },
-    { id: "c2", name: '4" Commet', price: 1050 },
-    { id: "c3", name: '6" Commet (Vanitha)', price: 3200 },
+    { id: "c2", name: '4" Commet', price: 1050, img: "https://github.com/siddarth4444-0715/rudra_fireworks/blob/main/8900e7cd-d86b-4736-b155-71018b192567.jpg" },
+    { id: "c3", name: '6" Commet (Vanitha)', price: 3200, img: "https://github.com/siddarth4444-0715/rudra_fireworks/blob/main/74f7224f-816e-4e2f-b6be-c1630e8a7d03.jpg" },
     { id: "c4", name: '6" Commet', price: 2800 }
   ],
   threads: [
-    { id: "t1", name: "Twinkling Star Small", price: 75 },
-    { id: "t2", name: "Twinkling Star Big", price: 195 }
+    { id: "t1", name: "Twinkling Star Small", price: 75, img: "https://github.com/siddarth4444-0715/rudra_fireworks/blob/main/86b8b22b-4bf3-4450-8816-0e0166d0308a.jpg" },
+    { id: "t2", name: "Twinkling Star Big", price: 195, img: "https://github.com/siddarth4444-0715/rudra_fireworks/blob/main/242529cf-a75c-4930-baae-c719d41ced4f.jpg" }
   ],
   redBijili: [
     { id: "rb1", name: "Red Bijili (Regular)", price: 60 },
