--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ const ITEMS = {
   ],
   flowerPots: [
     { id: "fp1", name: "F.P Big", price: 180 },
-    { id: "fp2", name: "F.P Special", price: 240, img: "https://github.com/siddarth4444-0715/rudra_fireworks/blob/main/8c210378-3be4-49b8-91cd-0f4ee450d4b8.jpg" },
+    { id: "fp2", name: "F.P Special", price: 240, img: "https://raw.githubusercontent.com/siddarth4444-0715/rudra_fireworks/main/8c210378-3be4-49b8-91cd-0f4ee450d4b8.jpg" },
     { id: "fp3", name: "F.P Ashoka (RG)", price: 315 },
     { id: "fp4", name: "F.P Colour Koti", price: 540 },
     { id: "fp5", name: "F.P Super Deluxe", price: 900, img: "https://github.com/siddarth4444-0715/rudra_fireworks/blob/main/10df0379-a176-44e8-9a7f-7da144443da6.jpg" },
