--- a/index.html
+++ b/index.html
@@ -168,8 +168,7 @@ const ITEMS = {
   ],
   hundredWala: [
     { id: "w1", name: "24 Chorsa", price: 150 },
-    { id: "w2", name: "1000 Wala", price: 600 , img: "https://raw.githubusercontent.com/siddarth4444-0715/rudra_fireworks/main/fe5db51c-7609-48e7-be1e-6d4999af6aa9.jpg
-" },
+    { id: "w2", name: "1000 Wala", price: 600  },
     { id: "w3", name: "2000 Wala", price: 1200, img: "https://raw.githubusercontent.com/siddarth4444-0715/rudra_fireworks/main/558199d2-3644-4ffa-aba2-d5a566d1e4b3.jpg" },
     { id: "w4", name: "5000 Wala", price: 3000 },
     { id: "w5", name: "10000 Wala", price: 6000 }
