--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@ const ITEMS = {
     { id: "b5", name: "Aadhi Toofan", price: 720 }
   ],
   flowerPots: [
-    { id: "fp1", name: "F.P Big", price: 180 },
+    { id: "fp1", name: "F.P Big", price: 180, img: "https://raw.githubusercontent.com/siddarth4444-0715/rudra_fireworks/main/dc9006a0-1935-44f2-b995-5a226fc3c266.jpg" },
     { id: "fp2", name: "F.P Special", price: 240, img: "https://raw.githubusercontent.com/siddarth4444-0715/rudra_fireworks/main/8c210378-3be4-49b8-91cd-0f4ee450d4b8.jpg" },
-    { id: "fp3", name: "F.P Ashoka (RG)", price: 315 },
-    { id: "fp4", name: "F.P Colour Koti", price: 540 },
+    { id: "fp3", name: "F.P Ashoka (RG)", price: 315, img: "https://raw.githubusercontent.com/siddarth4444-0715/rudra_fireworks/main/dc9006a0-1935-44f2-b995-5a226fc3c266.jpg" },
+    { id: "fp4", name: "F.P Colour Koti", price: 540, img: "https://raw.githubusercontent.com/siddarth4444-0715/rudra_fireworks/main/ed7a267a-9b9c-4111-b7da-e9564a94decc.jpg" },
     { id: "fp5", name: "F.P Super Deluxe", price: 900, img: "https://raw.githubusercontent.com/siddarth4444-0715/rudra_fireworks/main/10df0379-a176-44e8-9a7f-7da144443da6.jpg" },
-    { id: "fp6", name: "F.P Colour Koti Deluxe (RG)", price: 1050 },
-    { id: "fp7", name: "F.P Colour World (Vanitha)", price: 1550, img: "https://raw.githubusercontent.com/siddarth4444-0715/rudra_fireworks/main/1.jpg" },
+    { id: "fp6", name: "F.P Colour Koti Deluxe (RG)", price: 1050, img: "https://raw.githubusercontent.com/siddarth4444-0715/rudra_fireworks/main/c9f65d92-f9ee-4fa0-8926-f9bf701e6f49.jpg" },
+    { id: "fp7", name: "F.P Colour World (Vanitha)", price: 1550, img: "https://raw.githubusercontent.com/siddarth4444-0715/rudra_fireworks/main/07d1e786-b143-444f-b584-91c5f65565cf.jpg" },
     { id: "fp8", name: "F.P Colour Koti Super Big (Sonny)", price: 1850, img: "https://raw.githubusercontent.com/siddarth4444-0715/rudra_fireworks/main/466a7769-51e1-4deb-82a5-39e1ffccc40f.jpg" }
   ],
   groundChakkar: [
